# python-uinput

./: .gitignore  AUTHORS  NEWS.rst  README.rst  pyproject.toml  setup.py
src/: __init__.py
tests/: test_uinput.py
