[project]
name = "python-uinput"
version = "1.0.1"
description = "Pythonic API to Linux uinput kernel module."
authors = [
    {name = "pyinput"},
]
license = {text = "GPLv3+"}
readme = "README"
dependencies = []
requires-python = ">=2.7"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License (GPL)",
        "Operating System :: POSIX :: Linux",
        "Topic :: System :: Operating System Kernels :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 2",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        ]


[project.urls]
Homepage = "https://github.com/pyinput/python-uinput"

[tool.poetry.dependencies]
python = ">=2.7"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "uinput" = "src" }
